feat: add routes and swagger docs for the reorder and soft delete fucntions
